@@ -106,7 +106,7 @@ ScopedLuaRef create_ref(lua_State* l, int index) {
  * the error message if any).
  * This is not a <tt>const std::string&</tt> but a <tt>const char*</tt> on
  * purpose to avoid costly conversions as this function is called very often.
- * \return true in case of success.
+ * \return \c true in case of success.
  */
 bool call_function(
     lua_State* l,
@@ -123,6 +123,31 @@ bool call_function(
   }
 
   return true;
+}
+
+/**
+ * \brief Loads and executes some Lua code.
+ * \param l A Lua state.
+ * \param code The code to execute.
+ * \param chunk_name A name describing the Lua chunk
+ * (only used to print the error message if any).
+ * \return \c true in case of success.
+ */
+bool do_string(
+    lua_State* l,
+    const std::string& code,
+    const std::string& chunk_name
+) {
+  int load_result = luaL_loadstring(l, code.c_str());
+
+  if (load_result != 0) {
+    Debug::error(std::string("In ") + chunk_name + ": "
+        + lua_tostring(l, -1));
+    lua_pop(l, 1);
+    return false;
+  }
+
+  return call_function(l, 0, 0, chunk_name.c_str());
 }
 
 /**
