@@ -6,6 +6,7 @@ _______________________________
 Engine changes
 --------------
 
+* Allow to run Lua code from the standard input.
 * Add version number and symbolic links when building the library.
 * Add a -lag command-line option to simulate slower systems for debugging.
 * Print when the main loop starts and stops.
